[metadata]
name = torch_nl
version = attr: torch_nl.__version__
description = TorchScript-able neighbor lists implementations (linear and quadratic scaling) for molecular modeling
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics